--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -56,31 +56,56 @@
 
      
 
-        <table class="table table-striped table-bordered table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
+        <div class="cardInside3">
+            <table id="alimentos" class="table table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+    
+                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
+                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
+                        <% } %>
+    
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for (var i=0; i< items.myDocs.length; i++) { %>
+                    <tr>
+                        <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
+                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
+                        <td> - </td>
+                        <% } else { %>
+                        <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                        <% } %>
+                        <% } %>
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td> <%= items.myKcal[i] %> </td>
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/dish/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
+                </tbody>
+    
+            </table>
+            <br>
+        </div>
 
 
     </div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
+
+<script>
+    $(document).ready(function () {
+        $('#alimentos').DataTable({
+            "language": {
+             
+            "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+
+                "emptyTable": " "
+            }
+        });
+
+    });
+</script>
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 
 
 </html>
