--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -20,7 +20,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
 
+
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+<!-- JQUERY AUTOCOMPLETE
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
 
 </head>
 
@@ -55,44 +67,38 @@
         <% const  docs =   items.myDocs %>
 
      
-
         <div class="cardInside3">
-            <table id="alimentos" class="table table-bordered table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
-    
-                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
-                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
-                        <% } %>
-    
-                    </tr>
-                </thead>
-                <tbody>
-                    <% for (var i=0; i< items.myDocs.length; i++) { %>
-                    <tr>
-                        <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
-                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
-                        <td> - </td>
-                        <% } else { %>
-                        <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
-                        <% } %>
-                        <% } %>
-                    </tr>
+        <table id="platos" class="table table-bordered table-hover table-sm">
+            <thead class="thead-dark">
+                <tr>
+                    <% for (var i=0; i< nombres_sz; i++) { %>
+                    <th><%= nombres[i] %></th>
                     <% } %>
-                </tbody>
-    
-            </table>
-            <br>
-        </div>
-
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <% for (var i=0; i < docs_sz; i++) { %>
+                    <td> <%= docs[i]._id %> </td>
+                    <td> <%= items.myKcal[i] %> </td>
+                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/dish/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
+                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
+                        <button type="button" class="btn btn-warning"><a title="Editar" href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td>
+                </tr>
+                <% } %>
+            </tbody>
+        </table>
 
     </div>
+    </div>
+    <br>
     <%- include ("../partials/footer.ejs"); %>
 </body>
 
 <script>
     $(document).ready(function () {
-        $('#alimentos').DataTable({
+        console.log("hello")
+        $('#platos').DataTable({
             "language": {
              
             "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
@@ -105,6 +111,7 @@
 
 <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+
 
 
 </html>
