--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,9 +59,11 @@ a:hover {
 }
 
 .display-4 {
-  font-size: 3em;
+  text-align: center;
+  font-size: 4em;
   font-weight: bold;
 }
+
 
 .textarea {
   width: 90%;
@@ -274,8 +276,8 @@ h1 {
 }
 
 
-.planificacion {
-  min-width: 420px;
+.planificacion { 
+   min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
@@ -294,7 +296,7 @@ h1 {
 }
 
 .recomendation {
-  min-width: 420px;
+  min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
@@ -352,7 +354,7 @@ h1 {
 }
 
 .food {
-  min-width: 420px;
+  min-width: auto;
   min-height: 250px;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.6);
 }
@@ -456,7 +458,11 @@ input {
     max-width: 100%;
     height: auto;
   }
+  .display-4{
+    font-size: 2.25em;
+  }
 }
+
 
 html{
   width: 100%
