--- a/views/food/getFood.ejs
+++ b/views/food/getFood.ejs
@@ -10,7 +10,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 
-        <!-- JS, Popper.js, and jQuery -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -36,7 +36,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-    
+
 
 
 </head>
@@ -88,7 +88,14 @@
                         <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
                         <td> - </td>
                         <% } else { %>
+                        <% if ((items.myObject.tablaAlimentos.nombres[j]) === "Sal (g)") { %>
+                        <td> <%= ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]])/1000) %> </td>
+                        <% } else if ((items.myObject.tablaAlimentos.nombres[j]) === "Colesterol (g)") { %>
+                            <td> <%= ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]])/1000) %> </td>
+                        <% } else{ %>
                         <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                        <% }  %>
+
                         <% } %>
                         <% } %>
                     </tr>
