--- a/views/cim/cim-test.ejs
+++ b/views/cim/cim-test.ejs
@@ -35,7 +35,8 @@
     <div class="jumbotronFood center-block">
         <div class="jilorioInfo food">
             <h1 class="display-4">
-                <%= items.myObject.jilorioInfo[6].food.title %>
+                CIM INTEGRATION TEST
+                <b><%= items.resource %></b>
             </h1>
             <p style="text-align: center;">
                 <%= items.myObject.jilorioInfo[6].food.description%>
@@ -46,14 +47,15 @@
         <section class="features-icons text-center">
 
             <div class="row">
-                <% const rows = items.myDocs %>
+                <% const rows = items.data %>
                 <% for (var i=0; i < rows.length; i++) {
                     const row = rows[i];
                 %>
                     <div class="col-md-4 center-block">
                         <div class=" mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <div class="feature features-icons-icon">
-                                <%= row.shrt_desc %>
+                                <% const itemName = row.shrt_desc ? row.shrt_desc : row._id%>
+                                <%= itemName %>
                             </div>
                         </div>
                     </div>
