--- a/views/food/getFood.ejs
+++ b/views/food/getFood.ejs
@@ -42,7 +42,14 @@
 </head>
 
 <body>
+
+
     <%- include ("../partials/navigation.ejs"); %>
+    <div class="loader">
+        <img src="/images/loader.gif" alt="Loading">
+    </div>
+
+    
     <div class="container">
 
         <div class="infoPage">
@@ -111,6 +118,8 @@
     <%- include ("../partials/footer.ejs"); %>
 
     <script>
+        const loader = document.querySelector(".loader");
+        loader.className += " hidden"; // class "loader hidden"
         var ejsVal ="<%= items.myObject.idioma %>"
         
         $(document).ready(function () {
